Unit fix to prevent grid overflow

--- a/themes/wickedlyethan/assets/css/photos.css
+++ b/themes/wickedlyethan/assets/css/photos.css
@@ -1,9 +1,8 @@
 #camera-roll {
     display: grid;
     grid-template-columns: repeat(3,auto);
-    grid-gap: 2.5%;
+    grid-gap: 0.5em;
     justify-items: center;
-    align-items: start;
     padding-bottom: 1em;
 }
 .photo-post img {
